--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
         <li class="donut-type"> Cherry Donut</li>
         <li class="donut-type"> Custard Donut</li>
     </ul>
+        <p> We also sell the following cakes::</p>
+    <ul class="donut-container">
+        <li class="donut-type"> Chocolate Cake</li>
+        <li class="donut-type"> Cherry Cake</li>
+    </ul>
 </body>
 </html>
