nice beach, and new title

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <h1 class="title">COOL</h1>
+    <h1 class="title">COOLBEACH</h1>
     <p> Here's some nice donuts we sell:</p>
     <ul class="donut-container">
         <li class="donut-type"> Chocolate Donut</li>
@@ -19,5 +19,6 @@
         <li class="donut-type"> Chocolate Cake</li>
         <li class="donut-type"> Cherry Cake</li>
     </ul>
+    <img src="assets/beach.jpg" alt="beach">
 </body>
 </html>
